# themester

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  DIARY.md  LICENSE.rst  README.md  TODO.md  noxfile.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  reference.rst  requirements.txt
src/themester/: __init__.py  decorators.py  operators.py  protocols.py  resources.py  services.py  url.py  version.py
src/themester/nullster/: __init__.py  views.py
src/themester/nullster/static/: nullster.css
src/themester/sphinx/: __init__.py  builder_finished.py  builder_init.py  builder_inited.py  html_page_context.py  models.py  resource.py  services.py  template_bridge.py  xxx_builder_init.py  xxx_html_page_context.py  xxx_resource.py  xxx_template_bridge.py
tests/: conftest.py  test_decorators.py  test_init.py  test_nullster.py  test_operators.py  test_resources.py  test_url.py
tests/sphinx/: test_basic_sphinx.py  test_builder_inited.py  test_custom_view.py  test_html_page_context.py  test_nullster_setup.py  test_resource_factory.py  test_services.py  test_svcs_setup.py  test_template_bridge.py  test_themester_setup.py
tests/sphinx/roots/: test_nullster_setup.py  test_sphinx_setup.py
tests/sphinx/roots/test-basic-sphinx/: README.txt  conf.py  index.rst
tests/sphinx/roots/test-custom-view/: README.txt  conf.py
tests/sphinx/roots/test-nullster-setup/: README.txt  conf.py
tests/sphinx/roots/test-sphinx-setup/: README.txt  conf.py
tests/sphinx/roots/test-svcs-setup/: README.txt  conf.py  index.rst
tests/sphinx/roots/test-themester-setup/: README.txt  conf.py  index.rst
tests/sphinx/roots/test-views/: conf.py
