[project]
name = "themester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pauleveritt", email = "pauleveritt@me.com" }
]
requires-python = ">=3.14"
dependencies = [
    "furo>=2025.7.19",
    "markupsafe",
    "myst-parser>=4.0.1",
    "sphinx",
    "svcs",
    "uv-build>=0.8.8",
    "venusian",
]

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "beautifulsoup4",
    "pytest",
    "uv-build"
]
docs = [
    "myst-parser",
    "furo",
]


[tool.uv.sources]
tdom = { git = "https://github.com/t-strings/tdom", branch = "main" }
